--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,88 +7,82 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+    <!-- ===== NAVBAR ===== -->
     <header>
-        <nav>
+        <nav class="navbar">
             <div class="logo">CODESCAPE</div>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Careers</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="hero">
+    <!-- ===== HERO ===== -->
+    <section class="hero" id="home">
         <h1>Engineering Digital Excellence</h1>
         <p>Where Creativity Meets Technology</p>
-        <button>Get Started</button>
+        <button class="primary-btn">Get Started</button>
     </section>
 
-    <script src="script.js"></script>
-</body>
-</html>
-
-<section class="services">
-    <h2>Our Services</h2>
-    <div class="service-cards">
-        <div class="card">
-            <h3>Web Development</h3>
-            <p>Scalable and modern web applications built with engineering precision.</p>
+    <!-- ===== SERVICES ===== -->
+    <section class="services" id="services">
+        <h2>Our Services</h2>
+        <div class="service-cards">
+            <div class="card">
+                <h3>Web Development</h3>
+                <p>Scalable and modern web applications built with engineering precision.</p>
+            </div>
+            <div class="card">
+                <h3>Mobile Applications</h3>
+                <p>High-performance cross-platform mobile solutions.</p>
+            </div>
+            <div class="card">
+                <h3>AI & Automation</h3>
+                <p>Intelligent systems designed to optimize business workflows.</p>
+            </div>
         </div>
+    </section>
 
-        <div class="card">
-            <h3>Mobile Applications</h3>
-            <p>High-performance cross-platform mobile solutions.</p>
-        </div>
-
-        <div class="card">
-            <h3>AI & Automation</h3>
-            <p>Intelligent systems designed to optimize business workflows.</p>
-        </div>
-    </div>
-</section>
-<section class="about-preview">
-    <div class="about-container">
-        <div class="about-text">
+    <!-- ===== ABOUT ===== -->
+    <section class="about-preview" id="about">
+        <div class="about-container">
             <h2>About CODESCAPE</h2>
             <p>
                 CODESCAPE is an engineering-first technology partner delivering
-                reliable, scalable and impactful digital solutions.
+                reliable, scalable, and impactful digital solutions.
                 Our mission is simple — Your Success is our Mission.
             </p>
             <button class="secondary-btn">Learn More</button>
         </div>
-    </div>
-</section>
-<section class="projects">
-    <h2>Featured Projects</h2>
-    <div class="project-grid">
-        <div class="project-card">
-            <h3>Project Nova</h3>
-            <p>AI-powered analytics dashboard for enterprise workflow optimization.</p>
-        </div>
+    </section>
 
-        <div class="project-card">
-            <h3>Project Orion</h3>
-            <p>Scalable e-commerce platform with cloud-native infrastructure.</p>
+    <!-- ===== PROJECTS ===== -->
+    <section class="projects" id="projects">
+        <h2>Featured Projects</h2>
+        <div class="project-grid">
+            <div class="project-card">
+                <h3>Project Nova</h3>
+                <p>AI-powered analytics dashboard for enterprise workflow optimization.</p>
+            </div>
+            <div class="project-card">
+                <h3>Project Orion</h3>
+                <p>Scalable e-commerce platform with cloud-native infrastructure.</p>
+            </div>
+            <div class="project-card">
+                <h3>Project Zenith</h3>
+                <p>Cross-platform fintech mobile application with secure architecture.</p>
+            </div>
         </div>
+    </section>
 
-        <div class="project-card">
-            <h3>Project Zenith</h3>
-            <p>Cross-platform fintech mobile application with secure architecture.</p>
-        </div>
-    </div>
-</section
-
- <section class="testimonials">
-    <div class="testimonial-wrapper">
+    <!-- ===== TESTIMONIALS ===== -->
+    <section class="testimonials" id="testimonials">
         <h2>What Our Clients Say</h2>
-
         <div class="testimonial-container">
             <div class="testimonial-card">
                 <p>
@@ -97,7 +91,6 @@
                 </p>
                 <h4>- Sarah Johnson, CEO TechNova</h4>
             </div>
-
             <div class="testimonial-card">
                 <p>
                     "Highly reliable team with strong engineering knowledge.
@@ -106,50 +99,50 @@
                 <h4>- Arjun Mehta, Startup Founder</h4>
             </div>
         </div>
-    </div>
-</section>
-<section class="cta">
-    <div class="cta-container">
+    </section>
+
+    <!-- ===== CTA ===== -->
+    <section class="cta" id="contact">
         <h2>Let’s Build Something Exceptional Together</h2>
         <p>Your Success is Our Mission.</p>
         <button class="primary-btn">Contact Us</button>
-    </div>
-</section>
-<footer class="footer">
-    <div class="footer-container">
+    </section>
 
-        <div class="footer-column">
-            <h3>CODESCAPE</h3>
-            <p>Where Creativity Meets Technology</p>
+    <!-- ===== FOOTER ===== -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-column">
+                <h3>CODESCAPE</h3>
+                <p>Where Creativity Meets Technology</p>
+            </div>
+            <div class="footer-column">
+                <h4>Company</h4>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Careers</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h4>Legal</h4>
+                <ul>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms & Conditions</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h4>Contact</h4>
+                <p>Email: contact@codescape.com</p>
+                <p>Phone: +91 98765 43210</p>
+            </div>
         </div>
-
-        <div class="footer-column">
-            <h4>Company</h4>
-            <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Careers</a></li>
-            </ul>
+        <div class="footer-bottom">
+            <p>© 2026 CODESCAPE. All rights reserved.</p>
         </div>
+    </footer>
 
-        <div class="footer-column">
-            <h4>Legal</h4>
-            <ul>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms & Conditions</a></li>
-            </ul>
-        </div>
-
-        <div class="footer-column">
-            <h4>Contact</h4>
-            <p>Email: contact@codescape.com</p>
-            <p>Phone: +91 98765 43210</p>
-        </div>
-
-    </div>
-
-    <div class="footer-bottom">
-        <p>© 2026 CODESCAPE. All rights reserved.</p>
-    </div>
-</footer>
+    <!-- ===== JS ===== -->
+    <script src="script.js"></script>
+</body>
+</html>
