--- a/index.html
+++ b/index.html
@@ -166,3 +166,69 @@
 </html>
 
 
+<section class="clients reveal">
+    <h2>Trusted By Leading Companies</h2>
+    <div class="client-logos">
+        <img src="assets/images/client1.png" alt="Client 1" loading="lazy">
+        <img src="assets/images/client2.png" alt="Client 2" loading="lazy">
+        <img src="assets/images/client3.png" alt="Client 3" loading="lazy">
+        <img src="assets/images/client4.png" alt="Client 4" loading="lazy">
+    </div>
+</section>
+
+
+<section class="team reveal">
+    <h2>Meet the Team</h2>
+    <div class="team-cards">
+        <div class="team-card">
+            <img src="assets/images/team1.jpg" alt="Team Member" loading="lazy">
+            <h4>John Doe</h4>
+            <p>Lead Engineer</p>
+            <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+        </div>
+        <div class="team-card">
+            <img src="assets/images/team2.jpg" alt="Team Member" loading="lazy">
+            <h4>Jane Smith</h4>
+            <p>UI/UX Designer</p>
+            <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+        </div>
+    </div>
+</section>
+
+
+
+
+<div id="analytics-placeholder" style="display:none">
+    <!-- Traffic analytics or click tracking goes here -->
+</div>
+ <section id="blog">
+  <h2>Latest Blog Posts</h2>
+  <div class="blog-cards">
+    <div class="blog-card">
+      <h3>Top 5 Web Development Trends in 2026</h3>
+      <p>Discover the technologies shaping modern web applications...</p>
+    </div>
+    <div class="blog-card">
+      <h3>AI Automation: Boosting Business Productivity</h3>
+      <p>Learn how AI is transforming enterprise workflows...</p>
+    </div>
+    <div class="blog-card">
+      <h3>Mobile Apps That Drive Engagement</h3>
+      <p>Best practices for building cross-platform mobile solutions...</p>
+    </div>
+  </div>
+</section>
+
+<section id="careers">
+  <h2>Careers</h2>
+  <div class="career-cards">
+    <div class="career-card">
+      <h3>Frontend Developer</h3>
+      <p>Experience with React, JS, and CSS. Remote/On-site options.</p>
+    </div>
+    <div class="career-card">
+      <h3>AI Engineer</h3>
+      <p>Knowledge of Python, ML frameworks, and automation.</p>
+    </div>
+  </div>
+</section>
